<resources>
    <string name="app_name">GesAqua version 1.1</string>
    <string name="action_settings">Settings</string>
    <string name="gesaqua">Gesaqua</string>
    <string name="checkbox">CheckBox</string>
    <string name="mode_auto">Mode Auto</string>
    <string name="phdeleau">pH de l\'eau</string>
    <string name="temperature">Température : --- °C</string>
    <string name="niveau">Niveau :</string>
    <string name="intervention">Intervention :</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="alarmes">Alarmes</string>
    <string name="environnement">Environnement</string>
    <string name="param_tres">Paramétres :</string>
    <string name="consignes">Consignes</string>
    <string name="appareils">Appareils :</string>
    <string name="chauffage">Chauffage</string>
    <string name="eclairage">Eclairage</string>
    <string name="engrais">Engrais</string>
    <string name="filtration">Filtration</string>
    <string name="niveau_de_l_eau">Niveau de l\'eau :</string>
    <string name="nourriture">Nourriture</string>
    <string name="oxyg_ne">Oxygène</string>
    <string name="param_tres_vitaux">Paramètres Vitaux :</string>
    <string name="ventilation">Ventilation</string>
    <string name="ph_de_l_eau">pH de l\'eau :</string>
    <string name="temp_rature_min_22_max_27">Température min : 22 , max : 27</string>
    <string name="consignes_regulation">Consignes :</string>
    <string name="niveau_de_l_eau_bas"><![CDATA[Niveau de l\'eau : > bas]]></string>
    <string name="ph_min_6_5_max_7_5">pH min : 6.5 , max : 7.5</string>
    <string name="temp_rature">Température</string>
    <string name="ph">pH</string>
    <string name="min">Min :</string>
    <string name="retour">Retour</string>
    <string name="seuils_de_temp_rature">Seuils de température (°C) :</string>
    <string name="max">Max</string>
    <string name="Max">max :</string>
    <string name="parametres">Seuils</string>
    <string name="temp">température</string>
    <string name="dur_e_d_clairage">Durée d\'éclairage :</string>
    <string name="derni_re_distribution_d_engrais">Dernière distribution d\'engrais :</string>
    <string name="derni_re_distribution_de_nourriture">Dernière distribution de nourriture :</string>
    <string name="modes_fonctionnement">Modes :</string>
    <string name="historique">Historique :</string>
    <string name="aquarium">Aquarium :</string>
    <string name="infos_aquarium"/>
    <!---->


    <string name="date_label">Appuyer pour sélectionner une date</string>
    <string name="date_debut_button_set">Date de début</string>
    <string name="date_fin_button_set">Date de fin</string>
    <string name="date_debut_view_set">Date de début : </string>
    <string name="date_fin_view_set">Date de fin : </string>
    <string name="date_debut_selected"></string>
    <string name="date_fin_selected"></string>



    <string-array name="Appareils">
        <item id="eclairage">Eclairage</item>
        <item id="Temperature">Température</item>
        <item id="PH">pH</item>
    </string-array>
</resources>
